ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: incluster

spec:
  rules:
    - host: postgres.apps.infra.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  pgadmin
                port:
                  name: http
